--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,35 @@
   background: transparent;
   border-radius: calc(15px - 2px);
 }
+
+@keyframes scrollLeft {
+  0% {
+    transform: translateX(0%);
+  }
+
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes scrollRight {
+  0% {
+    transform: translateX(-50%);
+  }
+
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.animate-scroll-left {
+  animation: scrollLeft 15s linear infinite;
+}
+
+.animate-scroll-right {
+  animation: scrollRight 15s linear infinite;
+}
+
+.will-change-transform {
+  will-change: transform;
+}
