--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   font-style: normal;
 }
 
-.gradient-border {
+/* .gradient-border {
   position: relative;
   background: transparent;
   border-radius: 15px;
@@ -33,7 +33,7 @@
   z-index: 1;
   background: transparent;
   border-radius: calc(15px - 2px);
-}
+} */
 
 @keyframes scrollLeft {
   0% {
